uuagc (0.9.42.3-1) UNRELEASED; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Sat, 06 Apr 2013 16:34:45 +0200

uuagc (0.9.42.2-2) experimental; urgency=low

  * Last upload was not fully merged before, fixing this
  * Stop using the installed uuagc and use the included pre-generated files,
    as building fails otherwise:
    http://lists.debian.org/debian-haskell/2013/02/msg00026.html

 -- Joachim Breitner <nomeata@debian.org>  Sat, 09 Feb 2013 18:28:51 +0100

uuagc (0.9.42.2-1) experimental; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Sat, 09 Feb 2013 13:13:02 +0100

uuagc (0.9.42.1-1) experimental; urgency=low

  * Depend on haskell-devscripts 0.8.13 to ensure this packages is built
    against experimental
  * Bump standards version, no change
  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Mon, 05 Nov 2012 21:59:23 +0100

uuagc (0.9.40.3-2) unstable; urgency=low

  * To avoid self-build-dependency, ship the generated files in
    debian/generated-files/* and provide the debian/rules
    update-generated-files to update these.

 -- Joachim Breitner <nomeata@debian.org>  Thu, 12 Apr 2012 21:32:43 +0200

uuagc (0.9.40.3-1) unstable; urgency=low

  * New upstream release (Closes: #666365)
  * Add patch to build uuagc using the system installed uuagc. 

 -- Joachim Breitner <nomeata@debian.org>  Sun, 08 Apr 2012 18:41:52 +0200

uuagc (0.9.38.1-1) unstable; urgency=low

  * Adopted by the Debian Haskell Group. Thanks to Arjan for maintaining it.
  * New upstream release 

 -- Joachim Breitner <nomeata@debian.org>  Fri, 17 Jun 2011 10:44:19 +0200

uuagc (0.9.6-1) unstable; urgency=low

  * New upstream release.

 -- Arjan Oosting <arjan@debian.org>  Sat, 12 Apr 2008 11:59:06 +0200

uuagc (0.9.5-2) unstable; urgency=low

  * debian/control:
    - Bump build dependency on GHC to 6.8.2 as the build now needs
      Cabal version 1.2.0 or greater.
