@@ -8,6 +8,7 @@ Build-Depends:
   , haskell-devscripts (>= 0.8.13)
   , cdbs
   , ghc
+  , uuagc
   , libghc-uuagc-cabal-dev (>= 1.0.2.0)
   , libghc-mtl-dev (>= 1.1.1.1)
   , libghc-src-exts-dev (>= 1.11.1)
