@@ -5,11 +5,9 @@ include /usr/share/cdbs/1/class/hlibrary.mk
 
 # UUAGC has a strange way of setting the flag: It has to be set via a cpp
 # defines when compiling Setup
-#
-# Disabled for now:
-# http://lists.debian.org/debian-haskell/2013/02/msg00026.html
-#$(DEB_SETUP_BIN_NAME):
-#	if test ! -e Setup.lhs -a ! -e Setup.hs; then echo "No setup script found!"; exit 1; fi
-#	for setup in Setup.lhs Setup.hs; do if test -e $$setup; then ghc -DEXTERNAL_UUAGC --make $$setup -o $(DEB_SETUP_BIN_NAME); exit 0; fi; done
+
+$(DEB_SETUP_BIN_NAME):
+	if test ! -e Setup.lhs -a ! -e Setup.hs; then echo "No setup script found!"; exit 1; fi
+	for setup in Setup.lhs Setup.hs; do if test -e $$setup; then ghc -DEXTERNAL_UUAGC --make $$setup -o $(DEB_SETUP_BIN_NAME); exit 0; fi; done
 
 build/uuagc:: build-ghc-stamp
