@@ -1,6 +1,7 @@
 uuagc (0.9.42.3-1) UNRELEASED; urgency=low
 
   * New upstream release
+  * Use the installed uuagc again
 
  -- Joachim Breitner <nomeata@debian.org>  Sat, 06 Apr 2013 16:34:45 +0200
 
